# LabelTorchV

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.en.md  README.md  REVIEW.md  TEST_REPORT.md  VERIFICATION_REPORT.md  build_project.bat  test_db.txt  test_db_output.txt  test_out.txt  test_output.txt  tg.txt  tl.txt
.monkeycode/: MEMORY.md
.monkeycode/specs/2026-05-09-yolo-studio-desktop/: 00-product-charter-v2.md  01-master-spec-ultimate-v2.md  02-technology-selection-v2.md  03-domain-model-v2.md  04-system-architecture-v2.md  05-data-governance-architecture-v2.md  06-annotation-engine-spec-v2.md  07-training-orchestration-spec-v2.md  08-model-registry-and-evaluation-spec-v2.md  09-active-learning-spec-v2.md  10-ipc-contract-spec-v2.md  11-project-filesystem-spec-v2.md  12-state-machines-v2.md  13-error-recovery-and-rollback-spec-v2.md  14-performance-benchmark-spec-v2.md  15-version-roadmap-ultimate-v2.md  16-database-schema-full-v2.md  17-ui-ux-full-spec-v2.md  18-acceptance-matrix-full-v2.md  20-ai-implementation-governance-v2.md  21-reference-links.md  README-V2-INDEX.md
.monkeycode/specs/v3/: 00-版本路线图-v3.md  01-V0.1-环境验证与壳体版-任务书.md  02-V0.2-项目管理版-任务书.md  03-V0.3-数据导入版-任务书.md  04-V0.4-训练闭环版-任务书.md  05-V0.5-模型管理与导出版-任务书.md  06-V0.6-增量训练版-任务书.md  07-V1.0-标注引擎版-任务书.md  08-V1.1-辅助标注版-任务书.md  09-V1.2-数据治理版-任务书.md  10-开发环境搭建手册.md  11-V2.0-多模型与训练增强版-任务书.md  12-V3.0-OBB标注版-任务书.md  13-V4.0-主动学习与多任务版-任务书.md  14-V5.0-成熟发布版-任务书.md  README-V3-INDEX.md
.planning/: REVIEW.md
backend/: pyproject.toml  requirements.txt
backend/labeltorch_backend/: __init__.py  __main__.py  protocol.py  server.py
backend/labeltorch_backend/adapters/: __init__.py  base.py  registry.py  ultralytics_adapter.py
backend/labeltorch_backend/handlers/: __init__.py  active_learning.py  environment.py  export.py  inference.py  training.py
backend/labeltorch_backend/tools/: data_split.py
backend/tests/: conftest.py  test_protocol.py
cmake/: FindPythonEnv.cmake
installer/config/: config.xml  control.js
reference/: README.md
scripts/: build_cpu_package.bat  build_ifw_installer.sh  build_linux_package.sh  build_macos_package.sh  check_env.py  check_environment.py  deploy_windows.bat  fix_qml_colors.py  package_backend.py
src/: CMakeLists.txt
src/app/: AppController.cpp  AppController.h  CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  ThumbnailGenerator.cpp  ThumbnailGenerator.h
src/core/cache/: ThumbnailCache.cpp  ThumbnailCache.h
src/core/database/: Database.cpp  Database.h  Schema.cpp  Schema.h
src/core/filesystem/: ProjectFs.cpp  ProjectFs.h
src/core/ipc/: IpcClient.cpp  IpcClient.h  IpcProtocol.cpp  IpcProtocol.h
src/core/utils/: AppSettings.cpp  AppSettings.h  Id.h  JsonHelper.h  Log.cpp  Log.h
src/features/annotation/: AnnotationModel.cpp  AnnotationModel.h  AnnotationService.cpp  AnnotationService.h  CMakeLists.txt
src/features/annotation/canvas/: CanvasController.cpp  CanvasController.h  InteractionManager.cpp  InteractionManager.h  RenderLayer.h
src/features/annotation/geometry/: AxisAlignedBox.cpp  AxisAlignedBox.h  Geometry.h  Polygon.cpp  Polygon.h  RotatedBox.cpp  RotatedBox.h
src/features/annotation/labelio/: YoloTxtReader.cpp  YoloTxtReader.h  YoloTxtWriter.cpp  YoloTxtWriter.h
src/features/annotation/qml/: AnnotCanvas.qml  AnnotationPage.qml  ClassPanel.qml  SampleList.qml
src/features/dataset/: CMakeLists.txt  ClassMappingService.cpp  ClassMappingService.h  DatasetModel.cpp  DatasetModel.h  DatasetService.cpp  DatasetService.h  ImportScanner.cpp  ImportScanner.h
src/features/dataset/qml/: ClassManagerPanel.qml  ClassMappingPage.qml  DatasetBrowserPage.qml  DatasetStatsView.qml  ImportPage.qml
src/features/export/: CMakeLists.txt  ExportService.cpp  ExportService.h
src/features/export/qml/: ExportPage.qml  OnnxConfigPanel.qml
src/features/inference/: ActiveLearningService.cpp  ActiveLearningService.h  AssistedLabelService.cpp  AssistedLabelService.h  CMakeLists.txt  InferenceService.cpp  InferenceService.h
src/features/inference/qml/: ActiveLearningPage.qml  AssistedLabelPanel.qml  HardCaseQueue.qml  LowConfQueue.qml  QueueStatsPanel.qml  ReviewDialog.qml
src/features/model/: CMakeLists.txt  MetricService.cpp  MetricService.h  ModelRegistry.cpp  ModelRegistry.h  ModelVersionModel.cpp  ModelVersionModel.h
src/features/model/qml/: ComparePage.qml  MetricChart.qml  ModelPage.qml
src/features/project/: CMakeLists.txt  ProjectModel.cpp  ProjectModel.h  ProjectService.cpp  ProjectService.h  TaxonomyModel.cpp  TaxonomyModel.h  TaxonomyService.cpp  TaxonomyService.h
src/features/project/qml/: ProjectCard.qml  ProjectPage.qml  TaskTypeSwitcher.qml  TaxonomyPage.qml
src/features/training/: CMakeLists.txt  SnapshotModel.cpp  SnapshotModel.h  SnapshotService.cpp  SnapshotService.h  TrainingModel.cpp  TrainingModel.h  TrainingService.cpp  TrainingService.h
src/features/training/qml/: ConfigPanel.qml  LogView.qml  SnapshotPage.qml  TrainingPage.qml
src/shell/: CMakeLists.txt
src/shell/qml/: LogPanel.qml  Main.qml  NavTree.qml  StatusBar.qml  TaskPanel.qml  Theme.qml
tests/: CMakeLists.txt  test_database.cpp  test_export.cpp  test_geometry.cpp  test_inference.cpp  test_ipc.cpp  test_labelio.cpp  test_model.cpp  test_snapshot.cpp  test_taxonomy.cpp  test_training.cpp
