# src/CMakeLists.txt
# 标炬源码汇总

add_subdirectory(core)
add_subdirectory(app)
add_subdirectory(shell)
add_subdirectory(features/project)
add_subdirectory(features/dataset)
add_subdirectory(features/annotation)
add_subdirectory(features/training)
add_subdirectory(features/model)
add_subdirectory(features/inference)
add_subdirectory(features/export)
